deployment-manifest/04-ingress-class-alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: yoyo-store-ingress-class
spec:
  controller: ingress.k8s.aws/alb
