deployment-manifest/01-ServerMain-Deployment-and-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoyo-store-server-main-deployment
  labels:
    app: yoyo-store-server-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yoyo-store-server-main
  template:
    metadata:
      labels:
        app: yoyo-store-server-main
    spec:
      serviceAccountName: yoyo-store-system-sa
      containers:
      - name: yoyo-store-server-main
        image: "${CONTAINER_IMAGE_YOYO_MAIN}"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 8080
          name: http-main
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yoyo-store-server-main-service
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
spec:
  type: ClusterIP
  selector:
    app: yoyo-store-server-main
  ports:
  - name: http-main
    port: 8080
    targetPort: http-main
    protocol: TCP
