deployment-manifest/02-ServerInvoice-Deployment-and-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoyo-store-server-invoice-deployment
  labels:
    app: yoyo-store-server-invoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yoyo-store-server-invoice
  template:
    metadata:
      labels:
        app: yoyo-store-server-invoice
    spec:
      serviceAccountName: yoyo-store-system-sa
      containers:
      - name: yoyo-store-server-invoice
        image: "${CONTAINER_IMAGE_YOYO_INVOICE}"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 9090
          name: grpc-invoice
        - containerPort: 9091
          name: http-invoice
        readinessProbe:
          httpGet:
            path: /invoice/v1/health
            port: 9091
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /invoice/v1/health
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yoyo-store-server-invoice-service
spec:
  type: ClusterIP
  selector:
    app: yoyo-store-server-invoice
  ports:
  - name: grpc-invoice
    port: 9090
    targetPort: grpc-invoice
    protocol: TCP
  - name: http-invoice
    port: 9091
    targetPort: http-invoice
    protocol: TCP
