deployment-manifest/03-Frontend-Deployment-and-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoyo-store-frontend-deployment
  labels:
    app: yoyo-store-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yoyo-store-frontend
  template:
    metadata:
      labels:
        app: yoyo-store-frontend
    spec:
      serviceAccountName: yoyo-store-system-sa
      containers:
      - name: yoyo-store-frontend
        image: "${CONTAINER_IMAGE_YOYO_FRONTEND}"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 3000
          name: http-frontend
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yoyo-store-frontend-service
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  type: ClusterIP
  selector:
    app: yoyo-store-frontend
  ports:
  - name: http-frontend
    port: 80
    targetPort: http-frontend
    protocol: TCP
